Fix wrong padding-top of overseas plans table in English pricing details page.

--- a/src/sass/pages/_pricing.scss
+++ b/src/sass/pages/_pricing.scss
@@ -655,7 +655,7 @@ body.pricing.compare article.main {
     }
     .compare-header {
         float: left;
-        padding-top: 25px;
+        padding-top: 23px;
         width: 200px;
         @media screen and (max-width: $break-xs) {
             width: 150px;
